Smalll footer text update

--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
 
         <!-- Footer -->
         <footer class="text-center py-4 px-4 sm:px-6 mt-auto text-xs text-text-tertiary border-t border-divider-color">
-            <p>This application runs entirely on your machine. It is 
-                <a href="https://github.com/guidrezza/free-image-converter-resizer-compressor" target="_blank" rel="noopener noreferrer" class="text-accent hover:underline">open-source</a>, serverless, and 100% free.
+            <p>This application runs entirely on your device. It is 
+                <a href="https://github.com/guidrezza/free-image-converter-resizer-compressor" target="_blank" rel="noopener noreferrer" class="text-accent hover:underline">open-source</a>
+                , serverless, and 100% free with no limits.
             </p>
         </footer>
     </div>
