vibe coded added new image operations

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Image Kit - Modern Image Tools</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!-- Global Drop Overlay -->
@@ -56,6 +58,30 @@
                     <p>Increase image resolution using smart scaling algorithms.</p>
                     <div class="btn btn-primary">Start Upscaling</div>
                 </a>
+
+                <a href="metadata.html" class="glass-card">
+                    <h2>Metadata</h2>
+                    <p>View EXIF data or strip it entirely for privacy.</p>
+                    <div class="btn btn-primary">Manage Metadata</div>
+                </a>
+
+                <a href="favicon.html" class="glass-card">
+                    <h2>App Icons</h2>
+                    <p>Generate standard favicons and app icons in a single ZIP.</p>
+                    <div class="btn btn-primary">Generate Icons</div>
+                </a>
+
+                <a href="base64.html" class="glass-card">
+                    <h2>Base64</h2>
+                    <p>Convert images to Data URIs for embedding in code.</p>
+                    <div class="btn btn-primary">Encode Image</div>
+                </a>
+
+                <a href="crop.html" class="glass-card">
+                    <h2>Crop</h2>
+                    <p>Trim and frame your images with a visual editor.</p>
+                    <div class="btn btn-primary">Start Cropping</div>
+                </a>
             </div>
         </main>
     </div>
@@ -63,4 +89,5 @@
     <script src="js/core/ImageProcessor.js"></script>
     <script src="js/ui.js"></script>
 </body>
+
 </html>
