--- a/tests/runner.html
+++ b/tests/runner.html
@@ -32,12 +32,19 @@
     <div id="results">Running tests...</div>
 
     <!-- Load Modules -->
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+
     <script src="../js/core/ImageProcessor.js"></script>
     <script src="../js/strategies/BaseStrategy.js"></script>
     <script src="../js/strategies/ConverterStrategy.js"></script>
     <script src="../js/strategies/ResizerStrategy.js"></script>
     <script src="../js/strategies/CompressorStrategy.js"></script>
     <script src="../js/strategies/UpscaleStrategy.js"></script>
+    <script src="../js/strategies/MetadataStrategy.js"></script>
+    <script src="../js/strategies/FaviconStrategy.js"></script>
+    <script src="../js/strategies/Base64Strategy.js"></script>
+    <script src="../js/strategies/CropStrategy.js"></script>
 
     <script>
         const results = document.getElementById('results');
@@ -57,38 +64,47 @@
 
             // Test 1: Queue Limit
             try {
-                const processor = new ImageProcessor(); // Create fresh instance if possible, or use window.imageProcessor
                 // Note: window.imageProcessor is a singleton, so we should clear it first
-                window.imageProcessor.clearQueue();
+                if (window.imageProcessor) {
+                    window.imageProcessor.clearQueue();
+                    const fakeFiles = Array(105).fill(new File([""], "test.png", { type: "image/png" }));
+                    window.imageProcessor.addFiles(fakeFiles);
 
-                const fakeFiles = Array(105).fill(new File([""], "test.png", { type: "image/png" }));
-                window.imageProcessor.addFiles(fakeFiles);
-
-                if (window.imageProcessor.queue.length === 100) {
-                    log('Queue limits to 100 files', true);
+                    if (window.imageProcessor.queue.length === 100) {
+                        log('Queue limits to 100 files', true);
+                    } else {
+                        log(`Queue limit failed: ${window.imageProcessor.queue.length}`, false);
+                    }
                 } else {
-                    log(`Queue limit failed: ${window.imageProcessor.queue.length}`, false);
+                    log('ImageProcessor not loaded', false);
                 }
             } catch (e) {
                 log(`Queue limit test error: ${e.message}`, false);
             }
 
             // Test 2: Strategy Existence
-            if (window.ConverterStrategy && window.ResizerStrategy) {
-                log('Strategies loaded correctly', true);
-            } else {
-                log('Strategies missing', false);
-            }
+            const strategies = [
+                'ConverterStrategy', 'ResizerStrategy', 'CompressorStrategy', 'UpscaleStrategy',
+                'MetadataStrategy', 'FaviconStrategy', 'Base64Strategy', 'CropStrategy'
+            ];
+
+            strategies.forEach(strat => {
+                if (window[strat]) {
+                    log(`${strat} loaded`, true);
+                } else {
+                    log(`${strat} missing`, false);
+                }
+            });
 
             // Test 3: Mock Execution (Converter)
             try {
-                const strategy = new window.ConverterStrategy();
-                // We can't easily test canvas drawing in headless without a real image, 
-                // but we can check if the class is instantiated and has execute method.
-                if (typeof strategy.execute === 'function') {
-                    log('ConverterStrategy has execute method', true);
-                } else {
-                    log('ConverterStrategy missing execute method', false);
+                if (window.ConverterStrategy) {
+                    const strategy = new window.ConverterStrategy();
+                    if (typeof strategy.execute === 'function') {
+                        log('ConverterStrategy has execute method', true);
+                    } else {
+                        log('ConverterStrategy missing execute method', false);
+                    }
                 }
             } catch (e) {
                 log(`Strategy test error: ${e.message}`, false);
